# contact_traj_opt

./: .gitignore  README.md
dartinterface/: CMakeLists.txt  dart-interface.cpp  dart-interface.h  dart-simulation.cpp  demo_urdf.cpp  env-model.cpp  env-model.h  main.cpp  opt-problem.cpp  opt-problem.hpp  tutorialdemo_leverup_wall.cpp
