set(CMAKE_CXX_FLAGS -std=c++11)
file(GLOB tutorials_src "*.cpp")
list(SORT tutorials_src)
list(APPEND CMAKE_PACKAGE_PATH "~/dart/build/cmake")
find_package(DART)
include_directories(${DART_INCLUDE_DIRS})
message(STATUS "${DART_INCLUDE_DIRS}")
message(STATUS "[ Tutorials ]")
message(STATUS "${CMAKE_PACKAGE_PATH}")

foreach(tutorial ${tutorials_src})
  get_filename_component(tutorial_base ${tutorial} NAME_WE)
  message(STATUS "Adding tutorial: ${tutorial_base}")
  add_executable(${tutorial_base} ${tutorial})
  target_link_libraries(${tutorial_base} dart)
endforeach(tutorial)
