set(CMAKE_CXX_FLAGS -std=c++11)
file(GLOB tutorials_src "*.cpp")
list(SORT tutorials_src)
list(APPEND CMAKE_PACKAGE_PATH "~/dart/build/cmake")
find_package(DART)
include_directories(${DART_INCLUDE_DIRS})
message(STATUS "${DART_INCLUDE_DIRS}")
message(STATUS "[ Tutorials ]")
message(STATUS "${CMAKE_PACKAGE_PATH}")

add_executable(test tutorialdemo_leverup_wall.cpp dart-interface.cpp env-model.cpp)
target_link_libraries(test dart)

add_executable(test_urdf demo_urdf.cpp dart-interface.cpp env-model.cpp)
target_link_libraries(test_urdf dart)
#foreach(tutorial ${tutorials_src})
#  get_filename_component(tutorial_base ${tutorial} NAME_WE)
#  message(STATUS "Adding tutorial: ${tutorial_base}")
#  add_executable(${tutorial_base} ${tutorial})
#  target_link_libraries(${tutorial_base} dart)
#endforeach(tutorial)
